--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
     port: 9999
     servlet:
-        context-path: /supplychain/encrypt
+        context-path: /drools
 spring:
     application:
         name: supplychain-encrypt
@@ -12,8 +12,6 @@ spring:
          charset: UTF-8
          enabled: true
          force: true
-    profiles:
-        active: dev
 auth:
     sso:
-        anonPattern: /drools/**;/kms/**;/supplychain/encrypt/login;/supplychain/encrypt/swagger*/**;/supplychain/encrypto/webjars/**;/supplychain/encrypt/v2/**;/supplychain/encrypt/csrf
+        anonPattern: /drools/**;
